@@ -325,7 +325,7 @@ void EAI_GetType (uintptr_t cNode,  char *ctmp, char *dtmp, uintptr_t *cNodePtr,
 	/* return values. */
 	/* fieldOffset - assigned above - offset */
 	*fieldOffset = (uintptr_t) myFieldOffs;
-	*dataLen = returnRoutingElementLength();	/* data len */
+	*dataLen = returnRoutingElementLength(mapEAItypeToFieldType(ctype));	/* data len */
 	*typeString = (uintptr_t) ctype;	
 	*scripttype =0;
 
